* Naming convention improvements * Improvements and bug fixes